[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsuki-ux"
version = "1.0.4"
description = "the official tsuki-ux for terminal apps"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/tsuki-team/tsuki-ux"
Source   = "https://github.com/tsuki-team/tsuki-ux/tree/main/python"

[tool.setuptools.packages.find]
where = ["."]
include = ["tsuki_ux*"]
