[package]
name = "tsuki-ux"
version = "1.0.8"
edition = "2021"
description = "the official tsuki-ux for terminal apps"
license = "MIT"
repository = "https://github.com/tsuki-team/tsuki-ux"
keywords = ["terminal", "cli", "spinner", "tui", "ansi"]
categories = ["command-line-interface"]

[dependencies]
# No external crates — pure stdlib + libc for TTY detection.
# Optional: enable the "crossterm" feature for richer platform support.

[features]
default = []

[[example]]
name = "demo"
path = "examples/demo.rs"
